Favicons, responsive tables, feedback colouring

--- a/html/sfe/patterns/12-site-favicon.html
+++ b/html/sfe/patterns/12-site-favicon.html
@@ -13,7 +13,7 @@
 The favicon for each SFE property is drawn from the brand identity for the property. The existing favicons are listed below.
 </p>
 
-<img src="../mie/assets/favicon.ico" alt="LOS favicon" title="LOS favicon" />
+<img src="../mie/assets/favicon-los.ico" alt="LOS favicon" title="LOS favicon" />
 
 <img src="../mie/assets/favicon-mie.ico" alt="MIE favicon" title="MIE favicon" />
 
