--- a/html/sfe/patterns/06-subnavigation.html
+++ b/html/sfe/patterns/06-subnavigation.html
@@ -5,7 +5,7 @@
       <a href="#">About Scotland on Screen</a>
     </li>
     <li class="subnav__item subnav__item--current">
-      <a href="#">What Can I Do?</a>
+      <a class="active" href="#">What Can I Do?</a>
     </li>
     <li class="subnav__item">
       <a href="#">Latest News & Updates</a>
@@ -21,7 +21,7 @@
 	<em>Also in this section:</em>
 	<ul>
 		<li class="subnav__item subnav__item--parent">
-			<a href="/moving-image-education" class="js-ga-event active" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Moving Image Education
+			<a href="/moving-image-education" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Moving Image Education
 			</a>
 		</li>
 		<li class="subnav__item subnav__item--current">
@@ -29,7 +29,7 @@
 			</a>
 		</li>
 		<li class="subnav__item subnav__item--sub-parent">
-			<a href="/moving-image-education/mie-and-curriculum" class="js-ga-event active" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Moving Image and the Curriculum
+			<a href="/moving-image-education/mie-and-curriculum" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Moving Image and the Curriculum
 			</a>
 			<ul>
 				<li class="subnav__item subnav__item--sub ">
