--- a/html/sfe/patterns/02-buttons.html
+++ b/html/sfe/patterns/02-buttons.html
@@ -5,7 +5,7 @@
 <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
 <!--Don't use White or Light-pastel CTA on White backgrounds-->
 <a href="#" class="btn btn--white">x White</a>
-<a href="#" class="btn btn--light-pastel">x Light-pastel</a>
+<a href="#" class="btn btn--light-pastel">✔ Light-pastel</a>
 
 <div class="bg bg--dark">
 <!--Don't use standard or mid CTA on Dark backgrounds-->
@@ -21,7 +21,7 @@
 
 <div class="bg bg--mid">
   
-  <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
+  <a href="#" class="btn btn--contrast">x Contrast Button</a>
   <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
     <a href="#" class="btn btn--white">✔ White</a>
   <a href="#" class="btn btn--light-pastel">✔ Light-pastel</a>
@@ -40,7 +40,7 @@
   <!--Don't use White, Light-pastel or light CTA on Light-pastel backgrounds-->
   <a href="#" class="btn btn--light-pastel">x Light-pastel</a>
   <a href="#" class="btn btn--light">x Light Button</a>
-  <a href="#" class="btn btn--white">x White</a>
+  <a href="#" class="btn btn--white">✔ White</a>
 </div>
 
 <br/><br/>
