--- a/html/sfe/guidepatterns/footer.html
+++ b/html/sfe/guidepatterns/footer.html
@@ -6,7 +6,7 @@
       </div>
       <div class="footer__top__report-issues">
         <span>Problems using this site or with its content?</span>
-        <a class="btn btn--contrast-alt">Report an Issue &raquo;</a>
+        <a class="btn btn--contrast">Report an Issue &raquo;</a>
       </div>
       <div class="footer__top__partners clearfix">
         <span>In partnership with:</span>
