--- a/html/sfe/assets-icons/output/preview.html
+++ b/html/sfe/assets-icons/output/preview.html
@@ -97,6 +97,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-sfe-logo:</code></pre><div class="icon-sfe-logo" style="width: 258px; height: 109px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-ss-logo:</code></pre><div class="icon-ss-logo" style="width: 304px; height: 92px;" ></div><hr/>
 			
 		
