--- a/html/sfe/guidepatterns/navigation.html
+++ b/html/sfe/guidepatterns/navigation.html
@@ -1,130 +1,144 @@
 <nav class="nav icon-pattern clearfix nav-collapse">
   <ul class="main-nav clearfix">
     <li class="home">
-      <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Home">Home</a>
+      <a href="#" class="js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Home">Home</a>
     </li>
-    <li class="getting-started parent clearfix">
-      <a href="#" class="parent-item js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Getting Started">
-        Getting Started
+    <li class="teaching-resources parent clearfix">
+      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Teaching Resources">
+        Teaching Resources
       </a>
-      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Getting Started">
+      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Teaching Resources">
         <div>
           <i class="sectionexpander icon-arrow-down"></i>
         </div>
       </a>
       <ul class="sub-menu">
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What is MIE?">
-            What's MIE About?
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="European Framework for Film Education">
+            European Framework for Film Education
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Background">
-            Background
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Ideas and Values">
+            Ideas and Values
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Moving Image and the Curriculum">
-            Before Watching
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Discover Film from the Past">
+            Discover Film from the Past
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Engage with Film in All Its Forms">
+            Engage with Film in All Its Forms
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Experience the Art of Film">
+            Experience the Art of Film
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Learn About the World">
+            Learn About the World
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Creativity in Filmmaking">
+            Creativity in Filmmaking
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Experience Film in the Cinema">
+            Experience Film in the Cinema
           </a>
         </li>
       </ul>
     </li>
-    <li class="analyse-film parent clearfix">
-      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Analyse Film">
-        Analyse Film
+    <li class="film-and-the-curriculum parent clearfix">
+      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Film and the Curriculum">
+        Film and the Curriculum
       </a>
-      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Analyse Film">
-        
+      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Film and the Curriculum">
         <div>
           <i class="sectionexpander icon-arrow-down"></i>
         </div>
       </a>
       <ul class="sub-menu">
         <li>
-          <a href="#" class=" js-ga-event" data-ga-cat="Navigation Item" data-ga-label="3 C's and 3 S's">
-            3 C's and 3 S's
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Explore">
-            Explore
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Platforms">
-            Platforms
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Resources">
-            Resources
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Media Timeline">
-            Media Timeline
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="European Framework for Film Education">
+            {{ Multiple Pages to be confirmed }}
           </a>
         </li>
       </ul>
     </li>
-    <li class="create-films parent clearfix">
-      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Create Films">
-        Create Films
+    
+    <li class="our-websites parent clearfix">
+      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Our Websites">
+        Our Websites
       </a>
-      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Create Films">
+      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Our Websites">
         <div>
           <i class="sectionexpander icon-arrow-down"></i>
         </div>
       </a>
       <ul class="sub-menu">
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Pre-production">
-            Pre-production
+          <a href="https://scotlandonscreen.org.uk" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Scotland on Screen">
+            Scotland on Screen
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Production">
-            Production
+          <a href="https://screeningshorts.org.uk" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Screening Shorts">
+            Screening Shorts
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Animation">
-            Animation
+          <a href="https://languagesonscreen.org.uk" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Languages on Screen">
+            Languages on Screen
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Documentary">
-            Documentary
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Found Footage">
-            Found Footage
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Post-production">
-            Post-production
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Screenings">
-            Screenings
+          <a href="https://movingimageeducation.org" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Moving Image Education">
+            Moving Image Education
           </a>
         </li>
       </ul>
     </li>
-    <li class="browse-films clearfix">
-      <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Browse Films">
-        Browse Films
+		<li class="partners parent clearfix">
+      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Partners">
+        Partners
       </a>
+		</li>
+    <li class="about-us parent clearfix">
+      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="About Us">
+        About Us
+      </a>
+      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: About Us">
+        <div>
+          <i class="sectionexpander icon-arrow-down"></i>
+        </div>
+      </a>
+      <ul class="sub-menu">
+        <li>
+          <a href="#" class=" js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What's On">
+            What's On
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="5-19 Programme">
+            5-19 Programme
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Useful Links">
+            Contact Us
+          </a>
+        </li>
+      </ul>
     </li>
   </ul>
 </nav>
-<div class="secondary-nav-spaceholder">
-	<span>Welcome to movingimageeducation.org!</span>
-</div>
 <div class="nav__trigger icon-pattern clearfix" id="nav-trigger">
   <div class="trigger__container">
     <i class="icon-menu"></i>
