Single Col Nav. TODO: Height issue with teaching resources section, look into space for scrollbar happening even on sections that don't need to scroll

--- a/html/sfe/guidepatterns/navigation.html
+++ b/html/sfe/guidepatterns/navigation.html
@@ -1,4 +1,4 @@
-<nav class="nav icon-pattern clearfix nav-collapse">
+<nav class="nav clearfix nav-collapse">
   <ul class="main-nav clearfix">
     <li class="home">
       <a href="#" class="js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Home">Home</a>
